--- a/documentation/content/ru/books/arch-handbook/driverbasics/_index.po
+++ b/documentation/content/ru/books/arch-handbook/driverbasics/_index.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
 "POT-Creation-Date: 2025-05-01 19:56-0300\n"
-"PO-Revision-Date: 2025-09-23 04:45+0000\n"
+"PO-Revision-Date: 2025-11-12 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/booksarch-handbookdriverbasics_index/ru/>\n"
@@ -304,7 +304,7 @@ msgid ""
 "user process. This is the most common type of device driver and there are "
 "plenty of simple examples in the source tree."
 msgstr ""
-"Драйвер символьного устройства — это драйвер, который передает данные "
+"Драйвер символьного устройства — это драйвер, который передаёт данные "
 "напрямую между устройством и пользовательским процессом. Это наиболее "
 "распространенный тип драйвера устройств, и в дереве исходного кода есть "
 "множество простых примеров."
@@ -824,7 +824,7 @@ msgid ""
 "particular write operation encountered a write error, this further compounds "
 "the consistency problem."
 msgstr ""
-"Это делает невозможным предсказуемое и надежное восстановление после сбоев "
+"Это делает невозможным предсказуемое и надёжное восстановление после сбоев "
 "для структур данных на диске (файловых систем, баз данных и т. д.). "
 "Поскольку операции записи могут быть отложены, ядро не может сообщить "
 "приложению, какая именно операция записи столкнулась с ошибкой, что "
