--- a/documentation/content/ru/books/arch-handbook/isa/_index.po
+++ b/documentation/content/ru/books/arch-handbook/isa/_index.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
 "POT-Creation-Date: 2025-05-01 19:56-0300\n"
-"PO-Revision-Date: 2025-09-01 04:45+0000\n"
+"PO-Revision-Date: 2025-11-12 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/booksarch-handbookisa_index/ru/>\n"
@@ -1866,7 +1866,7 @@ msgstr ""
 "`bus_dmamap_create()` или `bus_dmamem_alloc()`). Все страницы буфера "
 "проверяются на соответствие требованиям тега, и для несоответствующих "
 "выделяются промежуточные страницы. Создается массив дескрипторов физических "
-"сегментов и передается в подпрограмму обратного вызова. Ожидается, что эта "
+"сегментов и передаётся в подпрограмму обратного вызова. Ожидается, что эта "
 "подпрограмма обработает его каким-либо образом. Количество промежуточных "
 "буферов в системе ограничено, поэтому, если эти буферы требуются, но "
 "недоступны немедленно, запрос будет поставлен в очередь, и обратный вызов "
@@ -2129,7 +2129,7 @@ msgstr ""
 #: documentation/content/en/books/arch-handbook/isa/_index.adoc:471
 msgid ""
 "For a buffer that changes frequently and is passed from outside the driver:"
-msgstr "Для буфера, который часто изменяется и передается извне драйвера:"
+msgstr "Для буфера, который часто изменяется и передаётся извне драйвера:"
 
 #. type: delimited block . 4
 #: documentation/content/en/books/arch-handbook/isa/_index.adoc:480
@@ -3161,7 +3161,7 @@ msgstr ""
 "выполняться с таймаутами. Если устройство не отвечает в течение заданного "
 "времени, вероятно, оно неисправно или неправильно настроено, и драйвер "
 "должен вернуть ошибку. При определении интервала таймаута следует давать "
-"устройству дополнительное время для надежности: хотя предполагается, что "
+"устройству дополнительное время для надёжности: хотя предполагается, что "
 "`DELAY()` задерживает выполнение на одинаковое время на любой машине, "
 "существует некоторая погрешность, зависящая от конкретного процессора."
 
