--- a/documentation/content/ru/books/arch-handbook/jail/_index.po
+++ b/documentation/content/ru/books/arch-handbook/jail/_index.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-05-01 19:56-0300\n"
-"PO-Revision-Date: 2025-10-16 04:45+0000\n"
+"POT-Creation-Date: 2025-11-08 16:17+0000\n"
+"PO-Revision-Date: 2025-11-11 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/booksarch-handbookjail_index/ru/>\n"
@@ -65,7 +65,7 @@ msgid ""
 "if an attacker gains `root` within the jail, it is only an annoyance, and "
 "not a devastation. This article mainly focuses on the internals (source "
 "code) of jail. For information on how to set up a jail see the extref:"
-"{handbook}[handbook entry on jails, jails]."
+"{handbook}jails[handbook entry on jails, jails]."
 msgstr ""
 "Клетка становится новой моделью безопасности. Пользователи запускают "
 "потенциально уязвимые серверы, такие как Apache, BIND и sendmail, внутри "
@@ -258,8 +258,8 @@ msgstr "Процесс в клетке"
 #: documentation/content/en/books/arch-handbook/jail/_index.adoc:118
 msgid ""
 "Finally, the userland program jails the process. Jail now becomes an "
-"imprisoned process itself and then executes the command given using "
-"man:execv[3]."
+"imprisoned process itself and then executes the command given using man:"
+"execv[3]."
 msgstr ""
 "Наконец, пользовательская программа помещает процесс в `клетку`. Теперь "
 "`клетка` становится самим заключенным процессом и выполняет команду, "
@@ -303,9 +303,9 @@ msgstr "Пространство ядра системы"
 #. type: Plain text
 #: documentation/content/en/books/arch-handbook/jail/_index.adoc:133
 msgid ""
-"We will now be looking at the file [.filename]#/usr/src/sys/kern/"
-"kern_jail.c#. This is the file where the man:jail[2] system call, "
-"appropriate sysctls, and networking functions are defined."
+"We will now be looking at the file [.filename]#/usr/src/sys/kern/kern_jail."
+"c#. This is the file where the man:jail[2] system call, appropriate sysctls, "
+"and networking functions are defined."
 msgstr ""
 "Мы сейчас рассмотрим файл [.filename]#/usr/src/sys/kern/kern_jail.c#. В этом "
 "файле определены системный вызов man:jail[2], соответствующие sysctls и "
@@ -320,7 +320,8 @@ msgstr "Управляемые переменные ядра sysctl"
 #. type: Plain text
 #: documentation/content/en/books/arch-handbook/jail/_index.adoc:137
 msgid "In [.filename]#kern_jail.c#, the following sysctls are defined:"
-msgstr "В файле [.filename]#kern_jail.c# определены следующие параметры sysctl:"
+msgstr ""
+"В файле [.filename]#kern_jail.c# определены следующие параметры sysctl:"
 
 #. type: delimited block . 4
 #: documentation/content/en/books/arch-handbook/jail/_index.adoc:145
@@ -350,8 +351,7 @@ msgstr ""
 "int     jail_socket_unixiproute_only = 1;\n"
 "SYSCTL_INT(_security_jail, OID_AUTO, socket_unixiproute_only, CTLFLAG_RW,\n"
 "    &jail_socket_unixiproute_only, 0,\n"
-"    \"Processes in jail are limited to creating UNIX/IPv4/route sockets "
-"only\");\n"
+"    \"Processes in jail are limited to creating UNIX/IPv4/route sockets only\");\n"
 
 #. type: delimited block . 4
 #: documentation/content/en/books/arch-handbook/jail/_index.adoc:155
@@ -428,8 +428,8 @@ msgstr ""
 msgid ""
 "Each of these sysctls can be accessed by the user through the man:sysctl[8] "
 "program. Throughout the kernel, these specific sysctls are recognized by "
-"their name. For example, the name of the first sysctl is "
-"`security.jail.set_hostname_allowed`."
+"their name. For example, the name of the first sysctl is `security.jail."
+"set_hostname_allowed`."
 msgstr ""
 "Каждый из этих параметров sysctl может быть доступен пользователю через "
 "программу man:sysctl[8]. В ядре эти конкретные параметры sysctl распознаются "
@@ -457,8 +457,8 @@ msgstr ""
 "аргумента: `struct thread *td` и `struct jail_args *uap`. `td` — это "
 "указатель на структуру `thread`, которая описывает вызывающий поток. В "
 "данном контексте `uap` — это указатель на структуру, в которой содержится "
-"указатель на структуру `jail`, переданную из пользовательского пространства ["
-".filename]#jail.c#. Ранее, когда я описывал пользовательскую программу, вы "
+"указатель на структуру `jail`, переданную из пользовательского пространства "
+"[.filename]#jail.c#. Ранее, когда я описывал пользовательскую программу, вы "
 "видели, что системному вызову man:jail[2] была передана структура `jail` в "
 "качестве собственного аргумента."
 
@@ -495,14 +495,14 @@ msgid ""
 "`jail` structure pointed by `uap->jail` is copied into kernel space and is "
 "stored in another `jail` structure, `j`."
 msgstr ""
-"Следовательно, `uap->jail` можно использовать для доступа к структуре `jail`"
-", которая была передана системному вызову. Далее системный вызов копирует "
-"структуру `клетка` в пространство ядра с помощью функции man:copyin[9]. "
-"man:copyin[9] принимает три аргумента: адрес данных, которые нужно "
-"скопировать в пространство ядра (`uap->jail`), место для записи данных (`j`) "
-"и размер хранилища. Структура `jail`, на которую указывает `uap->jail`, "
-"копируется в пространство ядра и сохраняется в другой структуре `клетка` — "
-"`j`."
+"Следовательно, `uap->jail` можно использовать для доступа к структуре "
+"`jail`, которая была передана системному вызову. Далее системный вызов "
+"копирует структуру `клетка` в пространство ядра с помощью функции man:"
+"copyin[9]. man:copyin[9] принимает три аргумента: адрес данных, которые "
+"нужно скопировать в пространство ядра (`uap->jail`), место для записи данных "
+"(`j`) и размер хранилища. Структура `jail`, на которую указывает `uap-"
+">jail`, копируется в пространство ядра и сохраняется в другой структуре "
+"`клетка` — `j`."
 
 #. type: delimited block . 4
 #: documentation/content/en/books/arch-handbook/jail/_index.adoc:201
@@ -547,26 +547,18 @@ msgid ""
 msgstr ""
 "/usr/include/sys/jail.h:\n"
 "struct prison {\n"
-"        LIST_ENTRY(prison) pr_list;                     /* (a) all prisons */"
-"\n"
+"        LIST_ENTRY(prison) pr_list;                     /* (a) all prisons */\n"
 "        int              pr_id;                         /* (c) prison id */\n"
 "        int              pr_ref;                        /* (p) refcount */\n"
-"        char             pr_path[MAXPATHLEN];           /* (c) chroot path */"
-"\n"
-"        struct vnode    *pr_root;                       /* (c) vnode to rdir "
-"*/\n"
-"        char             pr_host[MAXHOSTNAMELEN];       /* (p) jail hostname "
-"*/\n"
-"        u_int32_t        pr_ip;                         /* (c) ip addr host "
-"*/\n"
+"        char             pr_path[MAXPATHLEN];           /* (c) chroot path */\n"
+"        struct vnode    *pr_root;                       /* (c) vnode to rdir */\n"
+"        char             pr_host[MAXHOSTNAMELEN];       /* (p) jail hostname */\n"
+"        u_int32_t        pr_ip;                         /* (c) ip addr host */\n"
 "        void            *pr_linux;                      /* (p) linux abi */\n"
-"        int              pr_securelevel;                /* (p) securelevel */"
-"\n"
-"        struct task      pr_task;                       /* (d) destroy task "
-"*/\n"
+"        int              pr_securelevel;                /* (p) securelevel */\n"
+"        struct task      pr_task;                       /* (d) destroy task */\n"
 "        struct mtx       pr_mtx;\n"
-"      void            **pr_slots;                     /* (p) additional data "
-"*/\n"
+"      void            **pr_slots;                     /* (p) additional data */\n"
 "};\n"
 
 #. type: Plain text
@@ -653,8 +645,8 @@ msgstr ""
 msgid ""
 "On FreeBSD, each kernel visible thread is identified by its `thread` "
 "structure, while the processes are described by their `proc` structures. You "
-"can find the definitions of the `thread` and `proc` structure in "
-"[.filename]#/usr/include/sys/proc.h#. For example, the `td` argument in any "
+"can find the definitions of the `thread` and `proc` structure in [."
+"filename]#/usr/include/sys/proc.h#. For example, the `td` argument in any "
 "system call is actually a pointer to the calling thread's `thread` "
 "structure, as stated before. The `td_proc` member in the `thread` structure "
 "pointed by `td` is a pointer to the `proc` structure which represents the "
@@ -744,11 +736,11 @@ msgstr ""
 "в клетке. Когда в ядре вызывается функция `jailed()` с вновь созданной "
 "структурой `ucred` в качестве аргумента, она возвращает 1, указывая, что "
 "учётные данные связаны с клеткой. Общим родительским процессом для всех "
-"процессов, созданных внутри клетки, является процесс, запускающий man:jail[8]"
-", так как он вызывает системный вызов man:jail[2]. При выполнении программы "
-"через man:execve[2] она наследует свойство клетки из структуры `ucred` "
-"родительского процесса, следовательно, у нее структура `ucred` тоже со "
-"свойством клетки."
+"процессов, созданных внутри клетки, является процесс, запускающий man:"
+"jail[8], так как он вызывает системный вызов man:jail[2]. При выполнении "
+"программы через man:execve[2] она наследует свойство клетки из структуры "
+"`ucred` родительского процесса, следовательно, у нее структура `ucred` тоже "
+"со свойством клетки."
 
 #. type: delimited block . 4
 #: documentation/content/en/books/arch-handbook/jail/_index.adoc:296
@@ -828,8 +820,8 @@ msgid ""
 "process. It inherently keep the newly forked child's credential consistent "
 "with its parent, so the child process is also jailed."
 msgstr ""
-"Когда процесс создается из родительского процесса, системный вызов "
-"man:fork[2] использует `crhold()` для поддержания учетных данных нового "
+"Когда процесс создается из родительского процесса, системный вызов man:"
+"fork[2] использует `crhold()` для поддержания учетных данных нового "
 "процесса. Это автоматически сохраняет учетные данные нового дочернего "
 "процесса согласованными с родительским, поэтому дочерний процесс также "
 "остается в клетке."
@@ -888,12 +880,12 @@ msgid ""
 "messages which tell them how to act. The functions which deal with messages "
 "are: man:msgctl[3], man:msgget[3], man:msgsnd[3] and man:msgrcv[3]. Earlier, "
 "I mentioned that there were certain sysctls you could turn on or off in "
-"order to affect the behavior of jail. One of these sysctls was "
-"`security.jail.sysvipc_allowed`. By default, this sysctl is set to 0. If it "
-"were set to 1, it would defeat the whole purpose of having a jail; "
-"privileged users from the jail would be able to affect processes outside the "
-"jailed environment. The difference between a message and a signal is that "
-"the message only consists of the signal number."
+"order to affect the behavior of jail. One of these sysctls was `security."
+"jail.sysvipc_allowed`. By default, this sysctl is set to 0. If it were set "
+"to 1, it would defeat the whole purpose of having a jail; privileged users "
+"from the jail would be able to affect processes outside the jailed "
+"environment. The difference between a message and a signal is that the "
+"message only consists of the signal number."
 msgstr ""
 "System V IPC основан на сообщениях. Процессы могут отправлять друг другу эти "
 "сообщения, которые указывают им, как действовать. Функции, работающие с "
@@ -982,8 +974,8 @@ msgstr ""
 "предоставляют ещё один способ для процессов блокировать ресурсы. Однако "
 "процесс, ожидающий семафор, который уже используется, будет находиться в "
 "состоянии сна до тех пор, пока ресурсы не будут освобождены. Следующие "
-"системные вызовы семафоров блокируются внутри клетки: man:semget[2], "
-"man:semctl[2] и man:semop[2]."
+"системные вызовы семафоров блокируются внутри клетки: man:semget[2], man:"
+"semctl[2] и man:semop[2]."
 
 #. type: Plain text
 #: documentation/content/en/books/arch-handbook/jail/_index.adoc:360
@@ -996,8 +988,8 @@ msgid ""
 "`semctl(semid, semnum, cmd, ...)`: `semctl` does the specified `cmd` on the "
 "semaphore queue indicated by `semid`."
 msgstr ""
-"`semctl(semid, semnum, cmd, ...)`: `semctl` выполняет указанную команду `cmd`"
-" для очереди семафоров, указанной в `semid`."
+"`semctl(semid, semnum, cmd, ...)`: `semctl` выполняет указанную команду "
+"`cmd` для очереди семафоров, указанной в `semid`."
 
 #. type: Plain text
 #: documentation/content/en/books/arch-handbook/jail/_index.adoc:363
@@ -1232,8 +1224,7 @@ msgid ""
 msgstr ""
 "/usr/src/sys/netinet/in_pcb.c:\n"
 "int\n"
-"in_pcbbind_setup(struct inpcb *inp, struct sockaddr *nam, in_addr_t *laddrp,"
-"\n"
+"in_pcbbind_setup(struct inpcb *inp, struct sockaddr *nam, in_addr_t *laddrp,\n"
 "    u_short *lportp, struct ucred *cred)\n"
 "{\n"
 "    ...\n"
@@ -1277,8 +1268,8 @@ msgid ""
 "that address."
 msgstr ""
 "Вы можете задаться вопросом, какую функцию выполняет `prison_ip()`. "
-"`prison_ip()` принимает три аргумента: указатель на учетные данные ("
-"представленные как `cred`), любые флаги и IP-адрес. Она возвращает 1, если "
+"`prison_ip()` принимает три аргумента: указатель на учетные данные "
+"(представленные как `cred`), любые флаги и IP-адрес. Она возвращает 1, если "
 "IP-адрес НЕ принадлежит клетке, и 0 в противном случае. Как видно из кода, "
 "если это действительно IP-адрес, не принадлежащий клетке, протоколу не "
 "разрешается привязываться к этому адресу."
