--- a/documentation/content/ru/books/arch-handbook/mac/_index.po
+++ b/documentation/content/ru/books/arch-handbook/mac/_index.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
 "POT-Creation-Date: 2025-05-01 19:56-0300\n"
-"PO-Revision-Date: 2025-10-30 04:45+0000\n"
+"PO-Revision-Date: 2025-11-12 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/booksarch-handbookmac_index/ru/>\n"
@@ -515,7 +515,7 @@ msgstr ""
 "необходимые блокировки на объекты при вызове с ссылкой на объект. Авторам "
 "политик необходимо учитывать эти семантики синхронизации, так как они иногда "
 "ограничивают типы доступа к меткам: например, когда ссылка только для чтения "
-"на учетные данные передается политике через точку входа, разрешены только "
+"на учетные данные передаётся политике через точку входа, разрешены только "
 "операции чтения для состояния метки, прикрепленного к учетным данным."
 
 #. type: Title ===
@@ -7076,8 +7076,8 @@ msgid ""
 "privilege.  This call may be made in a number of situations, including as a "
 "result of calls to man:open[2] with O_CREAT, man:mkfifo[2], and others."
 msgstr ""
-"Определить, могут ли учетные данные субъекта создать vnode с указанной "
-"родительской директорией, информацией о имени и атрибутами. Возвращает 0 при "
+"Определить, могут ли учетные данные субъекта создать vnode с указанным "
+"родительским каталогом, информацией о имени и атрибутами. Возвращает 0 при "
 "успехе или значение `errno` при ошибке. Рекомендуемые ошибки: EACCES при "
 "несоответствии метки или EPERM при отсутствии привилегий. Этот вызов может "
 "выполняться в различных ситуациях, включая вызовы man:open[2] с O_CREAT, "
@@ -7592,8 +7592,8 @@ msgid ""
 "no existing file to overwrite, `vp` and `label` will be NULL."
 msgstr ""
 "Определить, следует ли разрешить субъекту переименование vnode `vp` в "
-"директорию `dvp` или в имя, представленное `cnp`. Если не существует файла "
-"для перезаписи, `vp` и `label` будут NULL."
+"каталог `dvp` или в имя, представленное `cnp`. Если не существует файла для "
+"перезаписи, `vp` и `label` будут NULL."
 
 #. type: Title ====
 #: documentation/content/en/books/arch-handbook/mac/_index.adoc:4496
