--- a/documentation/content/ru/books/arch-handbook/scsi/_index.po
+++ b/documentation/content/ru/books/arch-handbook/scsi/_index.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
 "POT-Creation-Date: 2025-05-01 19:56-0300\n"
-"PO-Revision-Date: 2025-10-26 04:45+0000\n"
+"PO-Revision-Date: 2025-11-12 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/booksarch-handbookscsi_index/ru/>\n"
@@ -156,7 +156,7 @@ msgid ""
 "of the hardware)."
 msgstr ""
 "Периферийный драйвер получает запросы от ОС, преобразует их в "
-"последовательность команд SCSI и передает эти команды SCSI модулю интерфейса "
+"последовательность команд SCSI и передаёт эти команды SCSI модулю интерфейса "
 "SCSI. Модуль интерфейса SCSI отвечает за передачу этих команд реальному "
 "оборудованию (или, если оборудование не поддерживает SCSI, а использует, "
 "например, IDE, также преобразует команды SCSI в собственные команды "
@@ -393,7 +393,7 @@ msgid ""
 "xxx_poll are called."
 msgstr ""
 "mtx - Блокировка, связанная с данной SIM. Для SIM, которые не поддерживают "
-"блокировку, передается Giant. Для SIM, которые поддерживают, передается "
+"блокировку, передаётся Giant. Для SIM, которые поддерживают, передаётся "
 "блокировка, используемая для защиты структур данных этой SIM. Эта блокировка "
 "будет удерживаться при вызовах xxx_action и xxx_poll."
 
@@ -829,7 +829,7 @@ msgid ""
 "Summary section.  The possible status flags are:"
 msgstr ""
 "На самом деле, статус CCB не только присваивается в качестве кода возврата, "
-"но и CCB всегда имеет какой-то статус. Перед тем как CCB передается в "
+"но и CCB всегда имеет какой-то статус. Перед тем как CCB передаётся в "
 "процедуру `xxx_action()`, он получает статус CCB_REQ_INPROG, означающий, что "
 "запрос находится в процессе выполнения. В [.filename]#/sys/cam/cam.h# "
 "определено удивительно большое количество значений статуса, которые должны "
@@ -4082,7 +4082,7 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/books/arch-handbook/scsi/_index.adoc:1468
 msgid "_CAM_UNCOR_PARITY_ - unrecovered parity error occurred"
-msgstr "_CAM_UNCOR_PARITY_ - произошла неисправимая ошибка четности"
+msgstr "_CAM_UNCOR_PARITY_ - произошла неисправимая ошибка чётности"
 
 #. type: Plain text
 #: documentation/content/en/books/arch-handbook/scsi/_index.adoc:1469
