--- a/documentation/content/ru/books/arch-handbook/smp/_index.po
+++ b/documentation/content/ru/books/arch-handbook/smp/_index.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
 "POT-Creation-Date: 2025-05-01 19:56-0300\n"
-"PO-Revision-Date: 2025-10-29 04:45+0000\n"
+"PO-Revision-Date: 2025-11-08 16:33+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/booksarch-handbooksmp_index/ru/>\n"
@@ -442,8 +442,8 @@ msgstr ""
 "Если у обработчика прерывания есть предикат, то при срабатывании прерывания "
 "этот предикат выполняется. Если предикат возвращает значение `true`, "
 "прерывание считается полностью обработанным, и ядро возвращается из "
-"прерывания. Если предикат возвращает `false` или предиката нет, то "
-"запланированный обработчик запускается."
+"прерывания. Если предикат возвращает `false` или предиката нет, то система "
+"планирует запуск обработчика в контексте собственного потока."
 
 #. type: Plain text
 #: documentation/content/en/books/arch-handbook/smp/_index.adoc:110
