--- a/documentation/content/ru/books/arch-handbook/book.po
+++ b/documentation/content/ru/books/arch-handbook/book.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2022-07-07 23:22-0300\n"
-"PO-Revision-Date: 2025-08-16 04:45+0000\n"
+"POT-Creation-Date: 2025-11-08 16:17+0000\n"
+"PO-Revision-Date: 2025-11-11 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/booksarch-handbookbook/ru/>\n"
@@ -22,9 +22,7 @@ msgstr ""
 #: documentation/content/en/books/arch-handbook/book.adoc:1
 #, no-wrap
 msgid "For FreeBSD system developers. This book covers the architectural details of many important FreeBSD kernel subsystems"
-msgstr ""
-"Для разработчиков систем FreeBSD. В этой книге рассматриваются архитектурные "
-"особенности многих важных подсистем ядра FreeBSD"
+msgstr "Для разработчиков систем FreeBSD. В этой книге рассматриваются архитектурные особенности многих важных подсистем ядра FreeBSD"
 
 #. type: Title =
 #: documentation/content/en/books/arch-handbook/book.adoc:1
@@ -59,13 +57,13 @@ msgid ""
 "https://www.FreeBSD.org/[FreeBSD World Wide Web server]. It may also be "
 "downloaded in a variety of formats and compression options from the https://"
 "download.freebsd.org/doc/[FreeBSD download server] or one of the numerous "
-"extref:{handbook}[mirror sites, mirrors]."
+"extref:{handbook}mirrors[mirror sites, mirrors]."
 msgstr ""
 "Актуальная версия этого документа всегда доступна на https://www.FreeBSD.org/"
 "[официальном веб-сервере FreeBSD]. Его также можно загрузить в различных "
 "форматах и с разными вариантами сжатия с https://download.freebsd.org/doc/["
 "сервера загрузок FreeBSD] или одного из многочисленных зеркал "
-"extref:{handbook}mirrors/[mirror sites, mirrors]."
+"extref:{handbook}mirrors[mirror sites, mirrors]."
 
 #. type: Plain text
 #: documentation/content/en/books/arch-handbook/book.adoc:55
