--- a/documentation/content/ru/books/arch-handbook/usb/_index.po
+++ b/documentation/content/ru/books/arch-handbook/usb/_index.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: FreeBSD Documentation VERSION\n"
-"POT-Creation-Date: 2025-05-01 19:56-0300\n"
-"PO-Revision-Date: 2025-07-12 04:45+0000\n"
+"POT-Creation-Date: 2025-11-08 16:17+0000\n"
+"PO-Revision-Date: 2025-11-12 04:45+0000\n"
 "Last-Translator: Vladlen Popolitov <vladlenpopolitov@list.ru>\n"
 "Language-Team: Russian <https://translate-dev.freebsd.org/projects/"
 "documentation/booksarch-handbookusb_index/ru/>\n"
@@ -170,15 +170,15 @@ msgid ""
 "USB 2.0 Specification (http://www.usb.org/developers/docs/usb20_docs/[http://"
 "www.usb.org/developers/docs/usb20_docs/])"
 msgstr ""
-"Спецификация USB 2.0 (http://www.usb.org/developers/docs/usb20_docs/"
-"[http://www.usb.org/developers/docs/usb20_docs/])"
+"Спецификация USB 2.0 (http://www.usb.org/developers/docs/usb20_docs/[http://"
+"www.usb.org/developers/docs/usb20_docs/])"
 
 #. type: Plain text
 #: documentation/content/en/books/arch-handbook/usb/_index.adoc:69
 msgid ""
-"Universal Host Controller Interface (UHCI) Specification (link:ftp://"
-"ftp.netbsd.org/pub/NetBSD/misc/blymn/uhci11d.pdf[ftp://ftp.netbsd.org/pub/"
-"NetBSD/misc/blymn/uhci11d.pdf)]"
+"Universal Host Controller Interface (UHCI) Specification (link:ftp://ftp."
+"netbsd.org/pub/NetBSD/misc/blymn/uhci11d.pdf[ftp://ftp.netbsd.org/pub/NetBSD/"
+"misc/blymn/uhci11d.pdf])"
 msgstr ""
 "Универсальный интерфейс хост-контроллера (UHCI) Спецификация (link:ftp://ftp."
 "netbsd.org/pub/NetBSD/misc/blymn/uhci11d.pdf[ftp://ftp.netbsd.org/pub/NetBSD/"
@@ -187,9 +187,9 @@ msgstr ""
 #. type: Plain text
 #: documentation/content/en/books/arch-handbook/usb/_index.adoc:70
 msgid ""
-"Open Host Controller Interface (OHCI) Specification(link:ftp://"
-"ftp.compaq.com/pub/supportinformation/papers/hcir1_0a.pdf[ftp://"
-"ftp.compaq.com/pub/supportinformation/papers/hcir1_0a.pdf])"
+"Open Host Controller Interface (OHCI) Specification(link:ftp://ftp.compaq."
+"com/pub/supportinformation/papers/hcir1_0a.pdf[ftp://ftp.compaq.com/pub/"
+"supportinformation/papers/hcir1_0a.pdf])"
 msgstr ""
 "Спецификация интерфейса Open Host Controller (OHCI)(link:ftp://ftp.compaq."
 "com/pub/supportinformation/papers/hcir1_0a.pdf[ftp://ftp.compaq.com/pub/"
@@ -256,8 +256,8 @@ msgstr ""
 "(классы) устройств. Эти драйверы реализуют протокол, используемый в каналах, "
 "отличных от стандартного. Они также реализуют дополнительную "
 "функциональность для обеспечения доступа к устройству другим частям ядра или "
-"пользовательского пространства. Они используют интерфейс драйвера USB (USBDI)"
-", предоставляемый уровнем сервисов."
+"пользовательского пространства. Они используют интерфейс драйвера USB "
+"(USBDI), предоставляемый уровнем сервисов."
 
 #. type: Title ==
 #: documentation/content/en/books/arch-handbook/usb/_index.adoc:81
@@ -338,27 +338,28 @@ msgid ""
 "a more abstract interface doing a lot of work themselves."
 msgstr ""
 "Запросы устройств (управляющие передачи) к конечным точкам по умолчанию "
-"являются особыми. Они состоят из двух или трёх фаз: SETUP, DATA (опционально)"
-" и STATUS. Пакет настройки отправляется на устройство. Если присутствует "
-"фаза данных, направление пакета(ов) данных указывается в пакете настройки. "
-"Направление в фазе статуса противоположно направлению во время фазы данных "
-"или IN, если фазы данных не было. Аппаратное обеспечение хост-контроллера "
-"также предоставляет регистры с текущим состоянием корневых портов и "
-"изменениями, произошедшими с момента последнего сброса регистра изменений "
-"статуса. Доступ к этим регистрам предоставляется через виртуализированный "
-"концентратор, как предложено в спецификации USB. Виртуальный концентратор "
-"должен соответствовать классу устройств концентратора, указанному в главе 11 "
-"этой спецификации. Он должен предоставлять канал по умолчанию, через который "
-"можно отправлять запросы устройств. Он возвращает стандартные и специфичные "
-"для класса концентратора наборы дескрипторов. Также он должен предоставлять "
-"прерывающий канал, сообщающий об изменениях, происходящих на его портах. В "
-"настоящее время доступны две спецификации для хост-контроллеров: - Universal "
-"Host Controller Interface (UHCI) от Intel и Open Host Controller Interface "
-"(OHCI) от Compaq, Microsoft и National Semiconductor. Спецификация UHCI "
-"разработана для уменьшения аппаратной сложности, требуя от драйвера хост-"
-"контроллера предоставления полного расписания передач для каждого кадра. "
-"Контроллеры типа OHCI гораздо более независимы, предоставляя более "
-"абстрактный интерфейс и выполняя большую часть работы самостоятельно."
+"являются особыми. Они состоят из двух или трёх фаз: SETUP, DATA "
+"(опционально) и STATUS. Пакет настройки отправляется на устройство. Если "
+"присутствует фаза данных, направление пакета(ов) данных указывается в пакете "
+"настройки. Направление в фазе статуса противоположно направлению во время "
+"фазы данных или IN, если фазы данных не было. Аппаратное обеспечение хост-"
+"контроллера также предоставляет регистры с текущим состоянием корневых "
+"портов и изменениями, произошедшими с момента последнего сброса регистра "
+"изменений статуса. Доступ к этим регистрам предоставляется через "
+"виртуализированный концентратор, как предложено в спецификации USB. "
+"Виртуальный концентратор должен соответствовать классу устройств "
+"концентратора, указанному в главе 11 этой спецификации. Он должен "
+"предоставлять канал по умолчанию, через который можно отправлять запросы "
+"устройств. Он возвращает стандартные и специфичные для класса концентратора "
+"наборы дескрипторов. Также он должен предоставлять прерывающий канал, "
+"сообщающий об изменениях, происходящих на его портах. В настоящее время "
+"доступны две спецификации для хост-контроллеров: - Universal Host Controller "
+"Interface (UHCI) от Intel и Open Host Controller Interface (OHCI) от Compaq, "
+"Microsoft и National Semiconductor. Спецификация UHCI разработана для "
+"уменьшения аппаратной сложности, требуя от драйвера хост-контроллера "
+"предоставления полного расписания передач для каждого кадра. Контроллеры "
+"типа OHCI гораздо более независимы, предоставляя более абстрактный интерфейс "
+"и выполняя большую часть работы самостоятельно."
 
 #. type: Title ===
 #: documentation/content/en/books/arch-handbook/usb/_index.adoc:91
@@ -662,8 +663,8 @@ msgid ""
 msgstr ""
 "Дескрипторы конечных точек: Адрес конечной точки, направление и тип, "
 "максимальный поддерживаемый размер пакета и частота опроса, если тип "
-"является конечной точкой прерывания. Для конечной точки по умолчанию ("
-"конечная точка 0) дескриптора не существует, и она никогда не учитывается в "
+"является конечной точкой прерывания. Для конечной точки по умолчанию "
+"(конечная точка 0) дескриптора не существует, и она никогда не учитывается в "
 "дескрипторе интерфейса."
 
 #. type: Plain text
@@ -706,8 +707,8 @@ msgstr ""
 "Канальный обмен данными с конечными точками устройства осуществляется через "
 "так называемые *каналы*. Драйверы передают данные конечным точкам через "
 "канал и предоставляют функцию обратного вызова, которая вызывается при "
-"завершении или сбое передачи (асинхронные передачи) или ожидают завершения ("
-"синхронная передача). Передачи данных в конечную точку сериализуются в "
+"завершении или сбое передачи (асинхронные передачи) или ожидают завершения "
+"(синхронная передача). Передачи данных в конечную точку сериализуются в "
 "канале. Передача может завершиться успешно, завершиться с ошибкой или "
 "превысить время ожидания (если оно было задано). Существует два типа "
 "таймаутов для передач. Таймауты могут происходить из-за истечения времени на "
@@ -778,7 +779,7 @@ msgstr ""
 "Существует четыре различных типа конечных точек и соответствующих каналов: - "
 "Управляющий канал / канал по умолчанию: На каждое устройство приходится один "
 "управляющий канал, подключенный к конечной точке по умолчанию (конечная "
-"точка 0). Этот канал передает запросы устройства и связанные с ними данные. "
+"точка 0). Этот канал передаёт запросы устройства и связанные с ними данные. "
 "Разница между передачами через канал по умолчанию и другими каналами "
 "заключается в том, что протокол для этих передач описан в спецификации USB. "
 "Эти запросы используются для сброса и настройки устройства. Базовый набор "
@@ -1025,8 +1026,8 @@ msgstr ""
 msgid ""
 "For many devices the protocol information has not yet been published "
 "however. Information on the protocol being used might be available from the "
-"company making the device. Some companies will require you to sign a Non "
-"-Disclosure Agreement (NDA) before giving you the specifications. This in "
+"company making the device. Some companies will require you to sign a Non -"
+"Disclosure Agreement (NDA) before giving you the specifications. This in "
 "most cases precludes making the driver open source."
 msgstr ""
 "Для многих устройств информация о протоколе ещё не опубликована. Сведения об "
